Improve print defaults and UI features

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,8 @@ RATE_LIMIT_PER_MINUTE=60
 
 # Printing
 MAX_CHARS=1000
-FEED_LINES=3
+FEED_LINES=6
+CUT_FEED_LINES=3
 CUT_MODE=partial
 CONNECT_TIMEOUT_MS=2000
 WRITE_TIMEOUT_MS=2000
