--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fastify": "^4.28.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.11.25",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
