--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ CUT_FEED_LINES=3
 CUT_MODE=partial
 CONNECT_TIMEOUT_MS=2000
 WRITE_TIMEOUT_MS=2000
+RTSP_STREAM_URL=
 
 # SQLite
 DB_PATH=./data/receipty.sqlite
