--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fastify/rate-limit": "^9.1.0",
     "@fastify/static": "^7.0.3",
     "better-sqlite3": "^11.5.0",
+    "dotenv": "^17.2.3",
     "escpos": "^3.0.0-alpha.6",
     "escpos-usb": "^3.0.0-alpha.4",
     "fastify": "^4.28.1"
