--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@fastify/multipart": "^9.4.0",
     "@fastify/rate-limit": "^9.1.0",
     "@fastify/static": "^7.0.3",
     "better-sqlite3": "^11.5.0",
     "dotenv": "^17.2.3",
     "escpos": "^3.0.0-alpha.6",
     "escpos-usb": "^3.0.0-alpha.4",
-    "fastify": "^4.28.1"
+    "fastify": "^4.28.1",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
